apps/pocket-id/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pocket-id
    spec:
      containers:
      - name: pocket-id
        image: ghcr.io/pocket-id/pocket-id:v2.18.0
        ports:
        - name: web
          containerPort: 1411
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          httpGet:
            path: /healthz
            port: web
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /healthz
            port: web
          periodSeconds: 30
          initialDelaySeconds: 5
        volumeMounts:
        - name: data
          mountPath: /app/data
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 5m
            memory: 16Mi
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pocket-id
