apps/pocket-id/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
spec:
  parentRefs:
    - name: eg-external
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - auth.kilchhofer.info
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pocket-id
          port: 1411
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
