apps/pocket-id/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pocket-id
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id

  ingress:
    - toPorts:
        - ports:
            - port: web
              protocol: TCP

  egress:
    - toFQDNs:
          # Self-Hosted Dashboard Icons
          # See: https://selfh.st/icons/
        - matchName: cdn.jsdelivr.net
          # MaxMind GeoIP Updates
        - matchName: download.maxmind.com
        - matchPattern: "*.*.r2.cloudflarestorage.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

      # Notification via E-Mail
    - toFQDNs:
        - matchPattern: "smtp.googlemail.com"
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
